--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 body{
     margin: 0;
 }
-#mywebsite{
+
+#mywebsite {
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#landing{
+#landing {
     padding: 190px;
     text-align: center;
     background-image: url(../img/landing-img.jpg);
@@ -15,13 +16,80 @@ body{
 
 }
 
-#landing h1{
+#landing h1 {
     font-size: x-large;
+    color: white;
     text-shadow: 1px 1px 1px black;
 }
 
-#landing p{
+#landing p {
     font-size: small;
     color: white;
     text-shadow: 1px 1px 1px black;
+}
+
+#blog {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 100px;
+}
+
+#blog h2{
+    margin-bottom: 20px;
+    text-align: center;
+    width: 200%;
+    font-size: 300;
+}
+
+#blog div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: whitesmoke;
+    flex-basis: calc(20% - 15PX);
+    box-sizing: border-box;
+    width: calc(40% - 20px);
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px gray;
+    border: none;
+    position:relative;
+    overflow:hidden;
+}
+#blog div:nth-last-of-type(3){
+    background-color: black;
+    color:white;
+}
+
+#blog div div {
+    flex: 1;
+    padding: 20px;
+}
+
+#blog div img {
+    width:100%;
+    max-height: 200px;
+    object-fit: cover;
+    object-position: center;
+}
+
+#blog div p {
+    margin-bottom: 10px;
+    font-size: small;
+    text-align: center;
+}
+
+#blog div a {
+    text-align: left;
+    color: lightgray;
+    padding: 5px 10x;
+    text-decoration: none;
+    border-color: transparent;
+    font-size: small;
+}
+
+#blog div a:hover {
+    color:hotpink;
+
 }
