--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body{
     position:relative;
     overflow:hidden;
 }
-#blog div:nth-last-of-type(3){
+#blog div:nth-of-type(3){
     background-color: black;
     color:white;
 }
@@ -92,4 +92,38 @@ body{
 #blog div a:hover {
     color:hotpink;
 
+}
+
+#services{
+    padding: 100px 0;
+    margin-top: 200px;
+    background-color: #f1f1f1;
+
+}
+
+#services h2{
+    font-size: 300;
+    text-align: center;
+}
+
+#services ul{
+    list-style: none;
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+}
+
+#services li {
+    font-size: medium;
+    width: 150px;
+    margin: 20px;
+    padding: 30px;
+    text-align: center;
+    background-color: white;
+}
+
+#services li:hover {
+   background-color: orangered;
 }
